// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should navigate when a link is clicked > with-href 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-10kyizu-MuiTypography-root-MuiLink-root"
  data-testid="with-href"
  href="/test-path"
>
  Some test link
</a>
`;

exports[`should render a link > basic-link 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-5fap85-MuiTypography-root-MuiLink-root"
  data-testid="basic-link"
  href="/test"
>
  Some test link
</a>
`;

exports[`should render active on the current path > some-test-link 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-10kyizu-MuiTypography-root-MuiLink-root"
  data-testid="some-test-link"
  href="/"
>
  Some test link
</a>
`;

exports[`should render disabled link > disabled-link 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-q649bg-MuiTypography-root-MuiLink-root"
  data-testid="disabled-link"
  href="/test"
>
  Some test link
</a>
`;

exports[`should render disabled link > disabled-link 2`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-q649bg-MuiTypography-root-MuiLink-root"
    data-testid="disabled-link"
    href="/test"
  >
    Some test link
  </a>
  <div
    data-testid="route-location"
  >
    /test
  </div>
</div>
`;
